--- a/nodejs-complete-course/project/public/css/main.css
+++ b/nodejs-complete-course/project/public/css/main.css
@@ -34,7 +34,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color:blueviolet;
+  background-color: #00695c;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -66,7 +66,7 @@ form {
   background: transparent;
   border: none;
   text-decoration: none;
-  color:greenyellow;
+  color: white;
   cursor: pointer;
 }
 
